/*
 * Copyright © 2015-2018 Serenova, LLC. All rights reserved.
 */

import React from 'react';
import { shallow } from 'enzyme';

import { PreferenceTitle } from '../PreferenceTitle';

describe('<PreferenceTitle />', () => {
  describe('preference is passed in', () => {
    const mockSetPreferenceSelected = jest.fn();
    const rendered = shallow(
      <PreferenceTitle
        preference="metrics"
        setPreferenceSelected={mockSetPreferenceSelected}
      />
    );
    it('renders correctly', () => {
      expect(rendered).toMatchSnapshot();
    });
    it('calls setPreferenceSelected when clicked', () => {
      rendered.find('#preferenceTitleBack').simulate('click');
      expect(mockSetPreferenceSelected).toBeCalledWith(undefined);
    });
  });
  describe('no preference passed in', () => {
    const rendered = shallow(
      <PreferenceTitle setPreferenceSelected={() => {}} />
    );
    it('renders correctly', () => {
      expect(rendered).toMatchSnapshot();
    });
  });
});
